# rust-encoding

./: .gitignore  .travis.yml  AUTHORS.txt  Cargo.toml  Makefile  Makefile.in  README.md  index.html  search-index.js
encoding/: index.html
encoding-index-japanese/: Cargo.toml
encoding-index-korean/: Cargo.toml
encoding-index-simpchinese/: Cargo.toml
encoding-index-singlebyte/: Cargo.toml  index-armscii-8.txt
encoding-index-tradchinese/: Cargo.toml  big5.rs
encoding/all/: constant.ASCII.html  constant.BIG5_2003.html  constant.ERROR.html  constant.EUC_JP.html  constant.GB18030.html  constant.GBK.html  constant.HZ.html  constant.IBM866.html  constant.ISO_2022_JP.html  constant.ISO_8859_1.html  constant.ISO_8859_10.html  constant.ISO_8859_13.html  constant.ISO_8859_14.html  constant.ISO_8859_15.html  constant.ISO_8859_16.html  constant.ISO_8859_2.html  constant.ISO_8859_3.html  constant.ISO_8859_4.html  constant.ISO_8859_5.html  constant.ISO_8859_6.html  constant.ISO_8859_7.html  constant.ISO_8859_8.html  constant.KOI8_R.html  constant.KOI8_U.html  constant.MAC_CYRILLIC.html  constant.MAC_ROMAN.html  constant.UTF_16BE.html  constant.UTF_16LE.html  constant.UTF_8.html  constant.WINDOWS_1250.html  constant.WINDOWS_1251.html  constant.WINDOWS_1252.html  constant.WINDOWS_1253.html  constant.WINDOWS_1254.html  constant.WINDOWS_1255.html  constant.WINDOWS_1256.html  constant.WINDOWS_1257.html  constant.WINDOWS_1258.html  constant.WINDOWS_31J.html  constant.WINDOWS_874.html  (+3 more)
encoding/codec/: index.html
encoding/label/: fn.encoding_from_whatwg_label.html  fn.encoding_from_windows_code_page.html  index.html
encoding/types/: enum.DecoderTrap.html  enum.EncoderTrap.html  fn.decode.html  index.html  struct.CodecError.html  trait.ByteWriter.html  trait.Encoding.html  trait.RawDecoder.html  trait.RawEncoder.html  trait.StringWriter.html  type.DecoderTrapFunc.html  type.EncoderTrapFunc.html  type.EncodingRef.html
encoding_index_japanese/: index.html
encoding_index_japanese/jis0208/: fn.backward.html  fn.backward_remapped.html  fn.forward.html  index.html
encoding_index_japanese/jis0212/: fn.backward.html  fn.forward.html  index.html
encoding_index_korean/: index.html
encoding_index_korean/euc_kr/: fn.backward.html  fn.forward.html  index.html
encoding_index_simpchinese/: index.html
encoding_index_simpchinese/gb18030/: fn.backward.html  fn.forward.html  index.html
encoding_index_simpchinese/gb18030_ranges/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/: index.html
encoding_index_singlebyte/ibm866/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_10/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_13/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_14/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_15/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_16/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_2/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_3/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_4/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_5/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_6/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_7/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/iso_8859_8/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/koi8_r/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/koi8_u/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/macintosh/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1250/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1251/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1252/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1253/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1254/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1255/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1256/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1257/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_1258/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/windows_874/: fn.backward.html  fn.forward.html  index.html
encoding_index_singlebyte/x_mac_cyrillic/: fn.backward.html  fn.forward.html  index.html
encoding_index_tests/: index.html  macro.multi_byte_range_tests!.html  macro.multi_byte_tests!.html  macro.single_byte_tests!.html  multi_byte_range_tests!.m.html  multi_byte_tests!.m.html  single_byte_tests!.m.html
encoding_index_tradchinese/: index.html
encoding_index_tradchinese/big5/: fn.backward.html  fn.forward.html  index.html
examples/: recode.rs
src/: all.rs  encoding.rs  label.rs  lib.rs  testutils.rs  types.rs  util.rs  whatwg.rs
src/codec/: ascii.rs  error.rs  japanese.rs  (+7 more)
src/index/japanese/: Cargo.toml  jis0208.rs  jis0212.rs  lib.rs
src/index/korean/: Cargo.toml  euc_kr.rs  lib.rs
src/index/singlebyte/: Cargo.toml  armscii_8.rs  cp437.rs  ibm866.rs  index-cp437.txt  iso_8859_10.rs  iso_8859_13.rs  iso_8859_14.rs  iso_8859_15.rs  iso_8859_16.rs  iso_8859_2.rs  iso_8859_3.rs  iso_8859_4.rs  iso_8859_5.rs  iso_8859_6.rs  iso_8859_7.rs  iso_8859_8.rs  koi8_r.rs  koi8_u.rs  lib.rs  macintosh.rs  windows_1250.rs  windows_1251.rs  windows_1252.rs  windows_1253.rs  windows_1254.rs  windows_1255.rs  windows_1256.rs  windows_1257.rs  windows_1258.rs  windows_874.rs  x_mac_cyrillic.rs
src/index/tradchinese/: Cargo.toml  big5.rs  lib.rs
(+216 files in other folders)
