[package]
name = "encoding"
version = "0.2.3"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Character encoding support for Rust"
homepage = "https://github.com/lifthrasiir/rust-encoding"
documentation = "https://lifthrasiir.github.io/rust-encoding/encoding/"
repository = "https://github.com/lifthrasiir/rust-encoding"
keywords = ["encoding"]
readme = "README.md"
license = "MIT"

[lib]
name = "encoding"

[dependencies.encoding-index-singlebyte]
version = "1.0.20140915"
path = "src/index/singlebyte"

[dependencies.encoding-index-korean]
version = "1.0.20140915"
path = "src/index/korean"

[dependencies.encoding-index-japanese]
version = "1.0.20140915"
path = "src/index/japanese"

[dependencies.encoding-index-simpchinese]
version = "1.0.20140915"
path = "src/index/simpchinese"

[dependencies.encoding-index-tradchinese]
version = "1.0.20140915"
path = "src/index/tradchinese"

