[package]
name = "encoding-index-korean"
version = "1.20141219.6"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Index tables for Korean character encodings"
homepage = "https://github.com/lifthrasiir/rust-encoding"
readme = "../../../README.md"
license = "CC0-1.0"

[lib]
name = "encoding_index_korean"
path = "lib.rs"

[features]
no-optimized-legacy-encoding = []

[dev-dependencies.encoding_index_tests]
version = "0.1.5"
path = "../encoding_index_tests"
