[package]
name = "encoding-index-tradchinese"
version = "1.20141219.6"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Index tables for traditional Chinese character encodings"
homepage = "https://github.com/lifthrasiir/rust-encoding"
readme = "../../../README.md"
license = "CC0-1.0"

[lib]
name = "encoding_index_tradchinese"
path = "lib.rs"

[features]
no-optimized-legacy-encoding = []

[dev-dependencies.encoding_index_tests]
version = "0.1.5"
path = "../encoding_index_tests"

[profile.test]
# `test_correct_table` tests tend to be especially slow
opt-level = 1
