[package]
name = "encoding-index-japanese"
version = "1.0.20140915"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Index tables for Japanese character encodings"
homepage = "https://github.com/lifthrasiir/rust-encoding"
readme = "../../../README.md"
license = "CC0-1.0"

[lib]
name = "encoding-index-japanese"
path = "lib.rs"

[dependencies.encoding_index_tests]
# TODO consider using dev-dependencies instead
version = "0.1.0"
path = "../tests"
